--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,12 +70,12 @@ services:
       - db
       - redis
 
-  sidekiq:
+  sidekiq_default_first:
     build: .
     image: tootsuite/mastodon
     restart: always
     env_file: .env.production
-    command: bundle exec sidekiq
+    command: bundle exec sidekiq -q default -q push
     depends_on:
       - db
       - redis
@@ -84,6 +84,36 @@ services:
       - internal_network
     volumes:
       - ./public/system:/mastodon/public/system
+
+    sidekiq_push_first:
+      build: .
+      image: tootsuite/mastodon
+      restart: always
+      env_file: .env.production
+      command: bundle exec sidekiq -q push -q default
+      depends_on:
+        - db
+        - redis
+      networks:
+        - external_network
+        - internal_network
+      volumes:
+        - ./public/system:/mastodon/public/system
+
+    sidekiq_all:
+      build: .
+      image: tootsuite/mastodon
+      restart: always
+      env_file: .env.production
+      command: bundle exec sidekiq -q default,1 -q push,1 -q mailers,1 -q pull,1
+      depends_on:
+        - db
+        - redis
+      networks:
+        - external_network
+        - internal_network
+      volumes:
+        - ./public/system:/mastodon/public/system
 ## Uncomment to enable federation with tor instances along with adding the following ENV variables
 ## http_proxy=http://privoxy:8118
 ## ALLOW_ACCESS_TO_HIDDEN_SERVICE=true
