--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     restart: always
     image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.1.3
     environment:
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "ES_JAVA_OPTS=-Xms1g -Xmx8g"
     networks:
       - internal_network
     healthcheck:
