さらばdependabot百烈拳
upstreamをマージした際にdependabotから依存関係の更新に関するPRと通知が大量に送られてくるという悲劇を防ぐ効果が期待される。
なお本forkではgithub特有の設定は必要ないため.githubディレクトリごと管理対象外とする。

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,6 @@ yarn-debug.log
 
 # Ignore Docker option files
 docker-compose.override.yml
+
+# Ignore github specific configs which are not needed for fork (ex. dependabot.yml, ISSUE_TEMPLATE...)
+.github/
